kubernetes/apps/network/envoy-gateway/gateways/404-httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-404-handler
  namespace: network
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: https
    - name: external-gateway
      namespace: network
      sectionName: https
  hostnames:
    - "test.dcunha.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: error-pages
          namespace: network
          port: 8080
